@@ -76,13 +76,13 @@
 		<hr />
 
 		<h3>Getting Started</h3> 
-		<p align="justify">First, to install HybridAuth, you can use the <a href="hybridauth/install.php">HybridAuth Auto Installer</a>.</p>
+		<p align="justify">First, go to config.php to setup your settings for HybridAuth.</p>
 
 		<p align="justify">Also, you can browse to the examples directory to check out some of <a href="examples/index.html">HybridAuth Showcases</a>.</p>
 		
-		<p align="justify">We also highly recommend to download and use <b>the latest release</b> from HybridAuth website at <a href="http://hybridauth.sourceforge.net/download.html">http://hybridauth.sourceforge.net/download.html</a> </p>
+		<p align="justify">We also highly recommend to download and use <b>the latest release</b> from Github at <a href="https://github.com/hybridauth/hybridauth/releases">https://github.com/hybridauth/hybridauth/releases</a> </p>
 
-		<p><strong>To get help and support</strong>, join us and participate in the hybridauth discussion group at <a href="http://hybridauth.sourceforge.net/support.html">http://hybridauth.sourceforge.net/support.html</a></p> 
+		<p><strong>To get help and support</strong>, join us and participate in the hybridauth discussion group at <a href="http://hybridauth.sourceforge.net/support.html">http://hybridauth.sourceforge.net/support.html</a> or use <a href="http://www.stackoverflow.com">StackOverflow</a>.</p> 
 
 		<hr />
 
