@@ -67,9 +67,9 @@
 	<div id="body">
     	<h2>Getting Started</h2>
         
-		<p align="justify">To install HybridAuth, you can use the <a href="../hybridauth/install.php">HybridAuth Auto Installer</a>.</p>
-        <p align="justify">You can also install HybridAuth manually by refering to <strong>Installation and Configuration</strong> sections at <a href="http://hybridauth.sourceforge.net/userguide.html">http://hybridauth.sourceforge.net/userguide.html</a></p>
-		<p align="justify">We also highly recommend to always download and use <b>the latest release</b> from HybridAuth website at <a href="http://hybridauth.sourceforge.net/download.html"></a><a href="http://hybridauth.sourceforge.net/download.html">http://hybridauth.sourceforge.net/download.html</a> </p>
+		<p align="justify">To make HybridAuth work, don't forget to go through the config.php file and set access codes for social media website and other settings.</p>
+                <p align="justify">Reffer to <strong>Installation and Configuration</strong> sections at <a href="http://hybridauth.sourceforge.net/userguide.html">http://hybridauth.sourceforge.net/userguide.html</a></p>
+		<p align="justify">We also highly recommend to download and use <b>the latest release</b> from Github at <a href="https://github.com/hybridauth/hybridauth/releases">https://github.com/hybridauth/hybridauth/releases</a> </p>
 		
 		<hr />
 
